Improve with toList()